# atex-cli

./: LICENSE  README.md  app.py  atex-cli.py  pyproject.toml  requirements.txt
atex/: __init__.py
atex/docs/: api.txt
atexcli/: __init__.py
atexcli/atex/: __init__.py
